--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     testImplementation ('org.mockito:mockito-junit-jupiter:3.5.13')
     testRuntime('org.junit.jupiter:junit-jupiter-engine')
     testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testImplementation('org.freemarker:freemarker:2.3.30')
+
 }
 
 test {
